fix: alignment problem on resources

--- a/site/components/ResourceCard/ResourceCard.module.less
+++ b/site/components/ResourceCard/ResourceCard.module.less
@@ -1,10 +1,7 @@
 .card {
   background-color: #fff;
   margin-top: 0px;
-  box-shadow: 0px 8px 10px rgba(49, 70, 89, 0.05);
   transition: all 0.3s;
-  margin-right: 6.5px;
-  margin-left: 6.5px;
   height: 400px;
   .detail {
     margin-top: 14.2%;
