--- a/site/components/Resources/Resources.module.less
+++ b/site/components/Resources/Resources.module.less
@@ -45,7 +45,18 @@
         position: absolute;
         width: 100%;
         text-align: center;
-        flex-wrap: wrap;
+        display: flex;
+        .cardWrapper {
+          box-shadow: 0px 8px 10px rgba(49, 70, 89, 0.05);
+          margin-right: 6.5px;
+          margin-left: 6.5px;
+          &:first-child {
+            margin-left: 0px;
+          }
+          &:last-child {
+            margin-right: 0px;
+          }
+        }
       }
     }
     .circleback {
@@ -84,11 +95,15 @@
       .rowsWrapper {
         margin-left: 0;
         width: 100%;
+        height: auto;
         .rows {
           position: relative;
+          flex-direction: column;
           .cardWrapper {
             width: 100%;
             margin-bottom: 20px;
+            margin-right: 0px;
+            margin-left: 0px;
           }
         }
       }
